force-app/main/default/objects/SalesTeamMember__c/SalesTeamMember__c.object-meta.xml
<CustomObject>
    <label>Sales Team Mitglied</label>
    <nameField>
        <displayFormat>STM-{00000}</displayFormat>
        <label>Sales Team Mitglied-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Team Mitglieder</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>