force-app/main/default/objects/SalesTeamMember__c/fields/Kontakt__c.field-meta.xml
<CustomField>
    <fullName>Kontakt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kontakt</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Team Mitglieder</relationshipLabel>
    <relationshipName>SalesTeamMember</relationshipName>
    <type>Lookup</type>
</CustomField>