force-app/main/default/objects/SalesTeamMember__c/fields/Rolle__c.field-meta.xml
<CustomField>
    <fullName>Rolle__c</fullName>
    <label>Rolle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teamleitung</fullName>
            </value>
            <value>
                <fullName>Teamassistenz</fullName>
            </value>
            <value>
                <fullName>Vertrieb</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>