force-app/main/default/objects/SalesTeamMember__c/fields/SalesTeam__c.field-meta.xml
<CustomField>
    <fullName>SalesTeam__c</fullName>
    <label>Sales Team</label>
    <referenceTo>SalesTeam__c</referenceTo>
    <relationshipLabel>Sales Team Mitglieder</relationshipLabel>
    <relationshipName>SalesTeamMember</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>